# FastAPI-Sifars

./: .env.example  .env.test  README.md  generate_cruds.py  pyproject.toml  test.py
src/: app.py
src/configs/: __init__.py  _auth.py  _database.py
src/entities/: __init__.py
src/entities/base/: _controller.py  _model.py  _repository.py  _schema.py  _service.py
src/entities/knowledge/: __init__.py  _controller.py  _model.py  _repository.py  _schema.py  _service.py
src/entities/test/: _controller.py
src/middlewares/: __init__.py  _authn.py  _authz.py  _permission_resolvers.py  _public_paths.py  _user_context.py
src/migrations/versions/: 7f3d2f6f4c01_add_knowledge_rag_tables.py
src/utils/: __init__.py
tests/: base_entity_api_test.py  conftest.py  test_audit_log_entity.py
